Authorization checks (#4)
